// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`partie complete > produit l instantane de reference apres une minute de jeu 1`] = `
{
  "alea": 625760797,
  "bots": {
    "noirs": 2,
    "ordinaires": 30,
    "total": 32,
  },
  "capturesParBotNoirSubies": {
    "alice": 2,
    "bob": 1,
    "chloe": 0,
  },
  "classement": [
    {
      "botsNoirsDetruits": 0,
      "botsPortes": 5,
      "captures": 0,
      "id": "bob",
      "points": 5,
    },
    {
      "botsNoirsDetruits": 0,
      "botsPortes": 2,
      "captures": 0,
      "id": "alice",
      "points": 2,
    },
    {
      "botsNoirsDetruits": 0,
      "botsPortes": 0,
      "captures": 1,
      "id": "chloe",
      "points": 0,
    },
  ],
  "compteurIdentifiants": 47,
  "evenements": {
    "captureJoueur": 1,
    "captureParBotNoir": 3,
    "mineDeZoneArmee": 1,
    "mineDeZonePosee": 4,
    "ralliement": 10,
    "zoneOuverte": 1,
  },
  "objetsPoses": 3,
  "partieTerminee": true,
  "positions": {
    "alice": {
      "x": 941.41,
      "y": 111.56,
    },
    "bob": {
      "x": 1523.48,
      "y": 514.34,
    },
    "chloe": {
      "x": 701.38,
      "y": 942.17,
    },
  },
  "tempsEcouleMs": 60000,
  "tick": 1200,
  "zonesActives": [
    "attraction",
  ],
}
`;

exports[`partie complete > produit l instantane de reference d une partie avec l Evade (etape 7.9) 1`] = `
{
  "alea": 1377902561,
  "bots": {
    "noirs": 2,
    "ordinaires": 30,
    "total": 32,
  },
  "capturesParBotNoirSubies": {
    "alice": 0,
    "bob": 1,
    "chloe": 1,
  },
  "classement": [
    {
      "botsNoirsDetruits": 0,
      "botsPortes": 7,
      "captures": 0,
      "id": "alice",
      "points": 7,
    },
    {
      "botsNoirsDetruits": 0,
      "botsPortes": 2,
      "captures": 1,
      "id": "bob",
      "points": 2,
    },
    {
      "botsNoirsDetruits": 0,
      "botsPortes": 2,
      "captures": 0,
      "id": "chloe",
      "points": 2,
    },
  ],
  "compteurIdentifiants": 50,
  "doubleurs": [],
  "evade": {
    "apparitionMs": 22531,
    "passe": false,
    "porteur": undefined,
    "present": true,
  },
  "evenements": {
    "captureJoueur": 1,
    "captureParBotNoir": 2,
    "evadeApparu": 1,
    "mineDeZonePosee": 3,
    "ralliement": 9,
  },
  "objetsPoses": 0,
  "partieTerminee": true,
  "positions": {
    "alice": {
      "x": 400,
      "y": 400,
    },
    "bob": {
      "x": 1770.1,
      "y": 578.58,
    },
    "chloe": {
      "x": 957.81,
      "y": 458.96,
    },
  },
  "tempsEcouleMs": 60000,
  "tick": 1200,
  "zonesActives": [],
}
`;

exports[`partie complete > produit l instantane de reference d une partie avec la fumee (etape 7.10) 1`] = `
{
  "alea": 2761880000,
  "bots": {
    "noirs": 2,
    "ordinaires": 30,
    "total": 32,
  },
  "capturesParBotNoirSubies": {
    "alice": 0,
    "bob": 0,
    "chloe": 2,
  },
  "classement": [
    {
      "botsNoirsDetruits": 0,
      "botsPortes": 3,
      "captures": 0,
      "id": "bob",
      "points": 3,
    },
    {
      "botsNoirsDetruits": 0,
      "botsPortes": 1,
      "captures": 1,
      "id": "chloe",
      "points": 1,
    },
    {
      "botsNoirsDetruits": 0,
      "botsPortes": 1,
      "captures": 0,
      "id": "alice",
      "points": 1,
    },
  ],
  "compteurIdentifiants": 52,
  "evenements": {
    "captureJoueur": 1,
    "captureParBotNoir": 2,
    "fumee": 1,
    "mineDeZonePosee": 3,
    "objetEmpoche": 1,
    "ralliement": 8,
  },
  "objetsPoses": 1,
  "partieTerminee": true,
  "poches": {
    "alice": null,
    "bob": null,
    "chloe": null,
  },
  "positions": {
    "alice": {
      "x": 1470.28,
      "y": 469.09,
    },
    "bob": {
      "x": 1200,
      "y": 900,
    },
    "chloe": {
      "x": 352.93,
      "y": 817.84,
    },
  },
  "tempsEcouleMs": 60000,
  "tick": 1200,
  "zonesActives": [],
}
`;

exports[`partie complete > produit l instantane de reference d une partie avec la mine (etape 7.11) 1`] = `
{
  "alea": 1817914645,
  "bots": {
    "noirs": 2,
    "ordinaires": 30,
    "total": 32,
  },
  "capturesParBotNoirSubies": {
    "alice": 0,
    "bob": 0,
    "chloe": 1,
  },
  "classement": [
    {
      "botsNoirsDetruits": 0,
      "botsPortes": 3,
      "captures": 1,
      "id": "chloe",
      "points": 3,
    },
    {
      "botsNoirsDetruits": 0,
      "botsPortes": 3,
      "captures": 0,
      "id": "alice",
      "points": 3,
    },
    {
      "botsNoirsDetruits": 0,
      "botsPortes": 2,
      "captures": 0,
      "id": "bob",
      "points": 2,
    },
  ],
  "compteurIdentifiants": 51,
  "evenements": {
    "captureJoueur": 1,
    "captureParBotNoir": 1,
    "mineArmee": 1,
    "mineDeZonePosee": 3,
    "mineExplosee": 1,
    "minePosee": 1,
    "objetEmpoche": 1,
    "ralliement": 9,
  },
  "minesPosees": [],
  "objetsPoses": 2,
  "partieTerminee": true,
  "positions": {
    "alice": {
      "x": 400,
      "y": 400,
    },
    "bob": {
      "x": 1198.58,
      "y": 412.23,
    },
    "chloe": {
      "x": 882.6,
      "y": 1275.17,
    },
  },
  "tempsEcouleMs": 60000,
  "tick": 1200,
  "touches": [],
  "zonesActives": [],
}
`;

exports[`partie complete > produit l instantane de reference d une partie ou une zone s ouvre (etape 7.12) 1`] = `
{
  "alea": 109985722,
  "bots": {
    "noirs": 2,
    "ordinaires": 30,
    "total": 32,
  },
  "capturesParBotNoirSubies": {
    "alice": 1,
    "bob": 1,
    "chloe": 0,
  },
  "classement": [
    {
      "botsNoirsDetruits": 0,
      "botsPortes": 3,
      "captures": 0,
      "id": "alice",
      "points": 3,
    },
    {
      "botsNoirsDetruits": 0,
      "botsPortes": 2,
      "captures": 0,
      "id": "chloe",
      "points": 2,
    },
    {
      "botsNoirsDetruits": 0,
      "botsPortes": 1,
      "captures": 1,
      "id": "bob",
      "points": 1,
    },
  ],
  "compteurIdentifiants": 51,
  "evenements": {
    "captureJoueur": 1,
    "captureParBotNoir": 2,
    "mineDeZoneArmee": 2,
    "mineDeZonePosee": 4,
    "ralliement": 7,
    "zoneOuverte": 2,
  },
  "minesDeZone": [
    {
      "armee": false,
      "nature": "invisibilite",
    },
    {
      "armee": false,
      "nature": "invisibilite",
    },
  ],
  "objetsPoses": 1,
  "partieTerminee": true,
  "positions": {
    "alice": {
      "x": 1759.64,
      "y": 109.4,
    },
    "bob": {
      "x": 945.5,
      "y": 1122.52,
    },
    "chloe": {
      "x": 768.84,
      "y": 1326.15,
    },
  },
  "tempsEcouleMs": 60000,
  "tick": 1200,
  "zonesActives": [],
  "zonesOuvertes": [
    {
      "nature": "chaos",
      "position": {
        "x": 1679.3205462861806,
        "y": 371.85182727407664,
      },
    },
    {
      "nature": "invisibilite",
      "position": {
        "x": 1824.5607152115554,
        "y": 133.44497056677938,
      },
    },
  ],
}
`;
